objects/Relationship_Interaction__c.object
<CustomObject>
    <description>A Relationship Interaction record will be used to capture the detail and link the results of a relationship-building meeting scheduled with an existing member and/or prospect.</description>
    <fields>
        <fullName>Assigned_To__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The primary ABC Staff member for this interaction</inlineHelpText>
        <label>Assigned To</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.IsActive</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>User.UserType</field>
                <operation>equals</operation>
                <value>Standard</value>
            </filterItems>
            <infoMessage>Filtered for active Users with type = Standard</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipLabel>Relationship Interactions</relationshipLabel>
        <relationshipName>Relationship_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cancelled__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Set to TRUE if Interaction will not occur</inlineHelpText>
        <label>Cancelled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Count__c</fullName>
        <formula>IF (Cancelled__c, 1, 0)</formula>
        <label>Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <formula>Primary_Contact__r.Email</formula>
        <label>Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date_Time__c</fullName>
        <label>End Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Institution__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Institution</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Relationship Interactions</relationshipLabel>
        <relationshipName>Relationship_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Interaction_Chain__c</fullName>
        <description>Updated by code when a new Relationship Interaction is created from an Outcome</description>
        <inlineHelpText>Count of Relationship Interactions in this series</inlineHelpText>
        <label>Interaction Chain</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Interaction_Level__c</fullName>
        <label>Interaction Level</label>
        <picklist>
            <picklistValues>
                <fullName>In-person</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone Conference</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Web/Video Conference</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Interaction_Type__c</fullName>
        <label>Interaction Type</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Key_Objectives__c</fullName>
        <inlineHelpText>Goal or anticipated outcome of the interaction</inlineHelpText>
        <label>Key Objectives</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <formula>Primary_Contact__r.Phone</formula>
        <label>Phone</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Select primary contact from Interaction Attendee section</inlineHelpText>
        <label>Primary Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.AccountId</field>
                <operation>equals</operation>
                <valueField>$Source.Institution__c</valueField>
            </filterItems>
            <filterItems>
                <field>Contact.Contact_Status__c</field>
                <operation>equals</operation>
                <value>Active</value>
            </filterItems>
            <infoMessage>Results are initially filtered based on the current Institution.</infoMessage>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Relationship Interactions</relationshipLabel>
        <relationshipName>Relationship_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Record_Number__c</fullName>
        <displayFormat>{00000000}</displayFormat>
        <inlineHelpText>Record counter number</inlineHelpText>
        <label>Record Number</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Source_Interaction__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>The previous Relationship Interaction which prompted this one.</inlineHelpText>
        <label>Source Interaction</label>
        <referenceTo>Relationship_Interaction__c</referenceTo>
        <relationshipLabel>Additional Relationship Interactions</relationshipLabel>
        <relationshipName>Relationship_Interactions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date_Time__c</fullName>
        <label>Start Date/Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status_Flag__c</fullName>
        <formula>IMAGE( 
    CASE( Status_Text__c, 
        &quot;Scheduled&quot;, &quot;/img/func_icons/util/datePicker16.gif&quot;, 
        &quot;Completed&quot;, &quot;/img/permissions_confirm16.gif&quot;, 
        &quot;Cancelled&quot;, &quot;/img/permissions_deny16.gif&quot;, 
    &quot;&quot;), 
&quot;Status&quot;, 12, 12)</formula>
        <label>Status Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_Text__c</fullName>
        <formula>IF (Cancelled__c, &apos;Cancelled&apos;,
    IF(End_Date_Time__c &gt; NOW(), &apos;Scheduled&apos;,
        IF(End_Date_Time__c &lt; NOW(), &apos;Completed&apos;, &apos;&apos;)
    )
)</formula>
        <inlineHelpText>Based on End Date/Time and Cancelled field</inlineHelpText>
        <label>Status Text</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>Status_Flag__c + &quot; &quot; + Status_Text__c</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Strategic_Account_POD__c</fullName>
        <formula>Institution__r.Strategic_Account_Pod__c</formula>
        <label>Strategic Account POD</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <formula>Primary_Contact__r.Title</formula>
        <label>Title</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Outcomes__c</fullName>
        <label>Total Outcomes</label>
        <summaryForeignKey>Outcome__c.Relationship_Interaction__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <label>Relationship Interaction</label>
    <nameField>
        <label>Relationship Interaction Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Relationship Interactions</pluralLabel>
    <recordTypes>
        <fullName>Basic_Interaction</fullName>
        <active>true</active>
        <description>A basic Relationship Interaction with commonly used fields</description>
        <label>Basic Interaction</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Basic_Interaction_Required_Fields</fullName>
        <active>true</active>
        <description>Verify all required fields are populated.</description>
        <errorConditionFormula>AND(
     RecordType.DeveloperName ==  $Label.Record_Type_Developer_Name_Basic_Interaction,
    OR(
        ISBLANK( Institution__c ),
        ISBLANK( Primary_Contact__c ),
        ISBLANK( Assigned_To__c ),
        ISBLANK( Start_Date_Time__c ),
        ISBLANK( End_Date_Time__c ),
        ISBLANK( TEXT(Interaction_Level__c) ),
        ISBLANK( Interaction_Type__c )
    )
)</errorConditionFormula>
        <errorMessage>At least one of the required fields is missing a value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Start_End_Date</fullName>
        <active>true</active>
        <description>Verify that the End Date is greater than the Start Date</description>
        <errorConditionFormula>AND (
   NOT( ISBLANK( Start_Date_Time__c ) ),
   NOT( ISBLANK( End_Date_Time__c ) ),
   Start_Date_Time__c &gt; End_Date_Time__c
)</errorConditionFormula>
        <errorMessage>End Date/Time must be greater than the Start Date/Time.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>VF_StartDateGreaterThanSourceInteraction</fullName>
        <active>true</active>
        <description>An additional interaction should never start before the original interaction.  Created for CR-20150813-9154.</description>
        <errorConditionFormula>IF (
        AND (
            NOT(ISNULL(Source_Interaction__c)),
            Start_Date_Time__c &lt;= Source_Interaction__r.Start_Date_Time__c
        ),
        true,
        false
    )</errorConditionFormula>
        <errorDisplayField>Start_Date_Time__c</errorDisplayField>
        <errorMessage>An additional interaction should never start before the original interaction.</errorMessage>
    </validationRules>
</CustomObject>